# hanabi-hcai

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  justpy.env  play.py  play.sh  pyproject.toml  start.sh  user_study.py  user_study.sh
agents/: game.py  main.py  mlp.py
agents/cross_play_wrappers/: agent_wrapper.py
examples/: rl_env_example.py
gui/: game_components.py  gui.py  launcher.py
protocol/: intra-group-protocol.py
