[tool.poetry]
name = "hanabi-hcai"
version = "0.1.0"
description = "An extension of the Hanabi Learning Environement allowing human users to play the game against artificial agents"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.11.*"
setuptools = "*"
scikit-build = "*"
cmake = "*"
ninja = "*"
justpy = "*"
tensorflow = "2.15"
keras = "*"

hanabi-learning-environment = {git = "https://github.com/deepmind/hanabi-learning-environment.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core<=1.0.4"]
build-backend = "poetry.core.masonry.api"
